# photos

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  TODO.md
crates/cli-client/: Cargo.toml
crates/cli-client/src/: main.rs
crates/web-client/: Cargo.toml
crates/web-client/src/: api.rs  cow_path.rs  def.rs  lib.rs  net.rs  people.rs  photos.rs
crates/web-core/: Cargo.toml
crates/web-core/src/: lib.rs
crates/web-core/src/serde_util/: datetime_ts_seconds_opt.rs  mod.rs
crates/web-server/: Cargo.toml
crates/web-server-derive/: Cargo.toml
crates/web-server-derive/src/: lib.rs
crates/web-server/migrations/2021-01-03-115508_initial/: down.sql  up.sql
crates/web-server/share/www/: index.html
crates/web-server/share/www/ss/: main.css
crates/web-server/src/: image_ext.rs  main.rs
crates/web-server/src/api/: get_appearance_avatar.rs  get_people.rs  get_person.rs  get_person_avatar.rs  get_photo.rs  get_photo_appearances.rs  get_photo_count_per_day.rs  get_photos_for_day.rs  merge_person.rs  mod.rs  post_photo.rs  put_person.rs
crates/web-server/src/db/: mod.rs  schema.rs
crates/web-server/src/db/model/: appearance.rs  avatar.rs  digest.rs  face_encoding.rs  mod.rs  person.rs  photo.rs
tools/docker/dev/: Dockerfile  docker-compose.yml
tools/docker/photos/: Dockerfile
tools/docker/photosd/: Dockerfile
tools/make/: cargo.mk
