[package]
name = "photos"
version = "0.1.0"
authors = ["Graham Rushton <gsrushton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
http = "0.2.2"
hyper = { version = "0.14.2", features = ["full"] }
pin-utils = "0.1.0"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["full"] }
