[package]
name = "photos-web-client"
version = "0.1.0"
authors = ["Graham Rushton <graham.rushton@argondesign.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.19"
console_error_panic_hook = "0.1.6"
dominator = "0.5.14"
futures = "0.3.9"
futures-signals = "0.3.16"
js-sys = "0.3.46"
log = "0.4.13"
photos-web-core = { path = "../web-core" }
pin-utils = "0.1.0"
serde = "1.0.118"
serde_json = "1.0.61"
serde_qs = "0.8.2"
thiserror = "1.0.23"
url = "2.2.0"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.19"
wasm-logger = "0.2.0"
wasm-streams = "0.1.2"
web-sys = { version = "0.3.46", features = ["Headers", "ReadableStream", "RequestInit", "Response"] }
