[package]
name = "photosd"
version = "0.1.0"
authors = ["Graham Rushton <gsrushton@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "1.4.0"
dlib-face-recognition = { path = "../../third-party/dlib-face-recognition" }
env_logger = "0.8.2"
futures = "0.3.8"
image = "0.23.12"
itertools = "0.10.0"
log = "0.4.11"
kamadak-exif = "0.5.2"
md5 = "0.7.0"
photos-web-core = { path = "../web-core" }
photos-web-server-derive = { path = "../web-server-derive" }
serde = { version = "1.0.118", features = ["derive"] }
serde_qs = "0.8.2"
serde_json = "1.0.61"
structopt = "0.3.21"
thiserror = "1.0.23"
